docs/upbound-provider-gcp/1.8/filestore/v1beta1/instance.md
---
permalink: /upbound-provider-gcp/1.8/filestore/v1beta1/instance/
---

# filestore.v1beta1.instance

"Instance is the Schema for the Instances API. A Google Cloud Filestore instance."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withFileShares(fileShares)`](#fn-specforproviderwithfileshares)
    * [`fn withFileSharesMixin(fileShares)`](#fn-specforproviderwithfilesharesmixin)
    * [`fn withKmsKeyName(kmsKeyName)`](#fn-specforproviderwithkmskeyname)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withNetworks(networks)`](#fn-specforproviderwithnetworks)
    * [`fn withNetworksMixin(networks)`](#fn-specforproviderwithnetworksmixin)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withTier(tier)`](#fn-specforproviderwithtier)
    * [`fn withZone(zone)`](#fn-specforproviderwithzone)
    * [`obj spec.forProvider.fileShares`](#obj-specforproviderfileshares)
      * [`fn withCapacityGb(capacityGb)`](#fn-specforproviderfileshareswithcapacitygb)
      * [`fn withName(name)`](#fn-specforproviderfileshareswithname)
      * [`fn withNfsExportOptions(nfsExportOptions)`](#fn-specforproviderfileshareswithnfsexportoptions)
      * [`fn withNfsExportOptionsMixin(nfsExportOptions)`](#fn-specforproviderfileshareswithnfsexportoptionsmixin)
      * [`fn withSourceBackup(sourceBackup)`](#fn-specforproviderfileshareswithsourcebackup)
      * [`obj spec.forProvider.fileShares.nfsExportOptions`](#obj-specforproviderfilesharesnfsexportoptions)
        * [`fn withAccessMode(accessMode)`](#fn-specforproviderfilesharesnfsexportoptionswithaccessmode)
        * [`fn withAnonGid(anonGid)`](#fn-specforproviderfilesharesnfsexportoptionswithanongid)
        * [`fn withAnonUid(anonUid)`](#fn-specforproviderfilesharesnfsexportoptionswithanonuid)
        * [`fn withIpRanges(ipRanges)`](#fn-specforproviderfilesharesnfsexportoptionswithipranges)
        * [`fn withIpRangesMixin(ipRanges)`](#fn-specforproviderfilesharesnfsexportoptionswithiprangesmixin)
        * [`fn withSquashMode(squashMode)`](#fn-specforproviderfilesharesnfsexportoptionswithsquashmode)
    * [`obj spec.forProvider.kmsKeyNameRef`](#obj-specforproviderkmskeynameref)
      * [`fn withName(name)`](#fn-specforproviderkmskeynamerefwithname)
      * [`obj spec.forProvider.kmsKeyNameRef.policy`](#obj-specforproviderkmskeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderkmskeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderkmskeynamerefpolicywithresolve)
    * [`obj spec.forProvider.kmsKeyNameSelector`](#obj-specforproviderkmskeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderkmskeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderkmskeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderkmskeynameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.kmsKeyNameSelector.policy`](#obj-specforproviderkmskeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderkmskeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderkmskeynameselectorpolicywithresolve)
    * [`obj spec.forProvider.networks`](#obj-specforprovidernetworks)
      * [`fn withConnectMode(connectMode)`](#fn-specforprovidernetworkswithconnectmode)
      * [`fn withModes(modes)`](#fn-specforprovidernetworkswithmodes)
      * [`fn withModesMixin(modes)`](#fn-specforprovidernetworkswithmodesmixin)
      * [`fn withNetwork(network)`](#fn-specforprovidernetworkswithnetwork)
      * [`fn withReservedIpRange(reservedIpRange)`](#fn-specforprovidernetworkswithreservediprange)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withFileShares(fileShares)`](#fn-specinitproviderwithfileshares)
    * [`fn withFileSharesMixin(fileShares)`](#fn-specinitproviderwithfilesharesmixin)
    * [`fn withKmsKeyName(kmsKeyName)`](#fn-specinitproviderwithkmskeyname)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withNetworks(networks)`](#fn-specinitproviderwithnetworks)
    * [`fn withNetworksMixin(networks)`](#fn-specinitproviderwithnetworksmixin)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withTier(tier)`](#fn-specinitproviderwithtier)
    * [`fn withZone(zone)`](#fn-specinitproviderwithzone)
    * [`obj spec.initProvider.fileShares`](#obj-specinitproviderfileshares)
      * [`fn withCapacityGb(capacityGb)`](#fn-specinitproviderfileshareswithcapacitygb)
      * [`fn withName(name)`](#fn-specinitproviderfileshareswithname)
      * [`fn withNfsExportOptions(nfsExportOptions)`](#fn-specinitproviderfileshareswithnfsexportoptions)
      * [`fn withNfsExportOptionsMixin(nfsExportOptions)`](#fn-specinitproviderfileshareswithnfsexportoptionsmixin)
      * [`fn withSourceBackup(sourceBackup)`](#fn-specinitproviderfileshareswithsourcebackup)
      * [`obj spec.initProvider.fileShares.nfsExportOptions`](#obj-specinitproviderfilesharesnfsexportoptions)
        * [`fn withAccessMode(accessMode)`](#fn-specinitproviderfilesharesnfsexportoptionswithaccessmode)
        * [`fn withAnonGid(anonGid)`](#fn-specinitproviderfilesharesnfsexportoptionswithanongid)
        * [`fn withAnonUid(anonUid)`](#fn-specinitproviderfilesharesnfsexportoptionswithanonuid)
        * [`fn withIpRanges(ipRanges)`](#fn-specinitproviderfilesharesnfsexportoptionswithipranges)
        * [`fn withIpRangesMixin(ipRanges)`](#fn-specinitproviderfilesharesnfsexportoptionswithiprangesmixin)
        * [`fn withSquashMode(squashMode)`](#fn-specinitproviderfilesharesnfsexportoptionswithsquashmode)
    * [`obj spec.initProvider.kmsKeyNameRef`](#obj-specinitproviderkmskeynameref)
      * [`fn withName(name)`](#fn-specinitproviderkmskeynamerefwithname)
      * [`obj spec.initProvider.kmsKeyNameRef.policy`](#obj-specinitproviderkmskeynamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderkmskeynamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderkmskeynamerefpolicywithresolve)
    * [`obj spec.initProvider.kmsKeyNameSelector`](#obj-specinitproviderkmskeynameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderkmskeynameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderkmskeynameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderkmskeynameselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.kmsKeyNameSelector.policy`](#obj-specinitproviderkmskeynameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderkmskeynameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderkmskeynameselectorpolicywithresolve)
    * [`obj spec.initProvider.networks`](#obj-specinitprovidernetworks)
      * [`fn withConnectMode(connectMode)`](#fn-specinitprovidernetworkswithconnectmode)
      * [`fn withModes(modes)`](#fn-specinitprovidernetworkswithmodes)
      * [`fn withModesMixin(modes)`](#fn-specinitprovidernetworkswithmodesmixin)
      * [`fn withNetwork(network)`](#fn-specinitprovidernetworkswithnetwork)
      * [`fn withReservedIpRange(reservedIpRange)`](#fn-specinitprovidernetworkswithreservediprange)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Instance

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"InstanceSpec defines the desired state of Instance"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"A description of the instance."

### fn spec.forProvider.withFileShares

```ts
withFileShares(fileShares)
```

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

### fn spec.forProvider.withFileSharesMixin

```ts
withFileSharesMixin(fileShares)
```

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withKmsKeyName

```ts
withKmsKeyName(kmsKeyName)
```

"KMS key name used for data encryption."

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"Resource labels to represent user-provided metadata."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Resource labels to represent user-provided metadata."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The name of the location of the instance. This can be a region for ENTERPRISE tier instances."

### fn spec.forProvider.withNetworks

```ts
withNetworks(networks)
```

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

### fn spec.forProvider.withNetworksMixin

```ts
withNetworksMixin(networks)
```

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.forProvider.withTier

```ts
withTier(tier)
```

"The service tier of the instance.\nPossible values include: STANDARD, PREMIUM, BASIC_HDD, BASIC_SSD, HIGH_SCALE_SSD, ZONAL, REGIONAL and ENTERPRISE"

### fn spec.forProvider.withZone

```ts
withZone(zone)
```

"The name of the Filestore zone of the instance."

## obj spec.forProvider.fileShares

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

### fn spec.forProvider.fileShares.withCapacityGb

```ts
withCapacityGb(capacityGb)
```

"File share capacity in GiB. This must be at least 1024 GiB\nfor the standard tier, or 2560 GiB for the premium tier."

### fn spec.forProvider.fileShares.withName

```ts
withName(name)
```

"The name of the fileshare (16 characters or less)"

### fn spec.forProvider.fileShares.withNfsExportOptions

```ts
withNfsExportOptions(nfsExportOptions)
```

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

### fn spec.forProvider.fileShares.withNfsExportOptionsMixin

```ts
withNfsExportOptionsMixin(nfsExportOptions)
```

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.fileShares.withSourceBackup

```ts
withSourceBackup(sourceBackup)
```

"The resource name of the backup, in the format\nprojects/{projectId}/locations/{locationId}/backups/{backupId},\nthat this file share has been restored from."

## obj spec.forProvider.fileShares.nfsExportOptions

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

### fn spec.forProvider.fileShares.nfsExportOptions.withAccessMode

```ts
withAccessMode(accessMode)
```

"Either READ_ONLY, for allowing only read requests on the exported directory,\nor READ_WRITE, for allowing both read and write requests. The default is READ_WRITE.\nDefault value is READ_WRITE.\nPossible values are: READ_ONLY, READ_WRITE."

### fn spec.forProvider.fileShares.nfsExportOptions.withAnonGid

```ts
withAnonGid(anonGid)
```

"An integer representing the anonymous group id with a default value of 65534.\nAnon_gid may only be set with squashMode of ROOT_SQUASH. An error will be returned\nif this field is specified for other squashMode settings."

### fn spec.forProvider.fileShares.nfsExportOptions.withAnonUid

```ts
withAnonUid(anonUid)
```

"An integer representing the anonymous user id with a default value of 65534.\nAnon_uid may only be set with squashMode of ROOT_SQUASH. An error will be returned\nif this field is specified for other squashMode settings."

### fn spec.forProvider.fileShares.nfsExportOptions.withIpRanges

```ts
withIpRanges(ipRanges)
```

"List of either IPv4 addresses, or ranges in CIDR notation which may mount the file share.\nOverlapping IP ranges are not allowed, both within and across NfsExportOptions. An error will be returned.\nThe limit is 64 IP ranges/addresses for each FileShareConfig among all NfsExportOptions."

### fn spec.forProvider.fileShares.nfsExportOptions.withIpRangesMixin

```ts
withIpRangesMixin(ipRanges)
```

"List of either IPv4 addresses, or ranges in CIDR notation which may mount the file share.\nOverlapping IP ranges are not allowed, both within and across NfsExportOptions. An error will be returned.\nThe limit is 64 IP ranges/addresses for each FileShareConfig among all NfsExportOptions."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.fileShares.nfsExportOptions.withSquashMode

```ts
withSquashMode(squashMode)
```

"Either NO_ROOT_SQUASH, for allowing root access on the exported directory, or ROOT_SQUASH,\nfor not allowing root access. The default is NO_ROOT_SQUASH.\nDefault value is NO_ROOT_SQUASH.\nPossible values are: NO_ROOT_SQUASH, ROOT_SQUASH."

## obj spec.forProvider.kmsKeyNameRef

"Reference to a CryptoKey in kms to populate kmsKeyName."

### fn spec.forProvider.kmsKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.kmsKeyNameRef.policy

"Policies for referencing."

### fn spec.forProvider.kmsKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.kmsKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.kmsKeyNameSelector

"Selector for a CryptoKey in kms to populate kmsKeyName."

### fn spec.forProvider.kmsKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.kmsKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.kmsKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.kmsKeyNameSelector.policy

"Policies for selection."

### fn spec.forProvider.kmsKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.kmsKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.networks

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

### fn spec.forProvider.networks.withConnectMode

```ts
withConnectMode(connectMode)
```

"The network connect mode of the Filestore instance.\nIf not provided, the connect mode defaults to\nDIRECT_PEERING.\nDefault value is DIRECT_PEERING.\nPossible values are: DIRECT_PEERING, PRIVATE_SERVICE_ACCESS."

### fn spec.forProvider.networks.withModes

```ts
withModes(modes)
```

"IP versions for which the instance has\nIP addresses assigned.\nEach value may be one of: ADDRESS_MODE_UNSPECIFIED, MODE_IPV4, MODE_IPV6."

### fn spec.forProvider.networks.withModesMixin

```ts
withModesMixin(modes)
```

"IP versions for which the instance has\nIP addresses assigned.\nEach value may be one of: ADDRESS_MODE_UNSPECIFIED, MODE_IPV4, MODE_IPV6."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.networks.withNetwork

```ts
withNetwork(network)
```

"The name of the GCE VPC network to which the\ninstance is connected."

### fn spec.forProvider.networks.withReservedIpRange

```ts
withReservedIpRange(reservedIpRange)
```

"A /29 CIDR block that identifies the range of IP\naddresses reserved for this instance."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"A description of the instance."

### fn spec.initProvider.withFileShares

```ts
withFileShares(fileShares)
```

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

### fn spec.initProvider.withFileSharesMixin

```ts
withFileSharesMixin(fileShares)
```

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withKmsKeyName

```ts
withKmsKeyName(kmsKeyName)
```

"KMS key name used for data encryption."

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"Resource labels to represent user-provided metadata."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Resource labels to represent user-provided metadata."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withNetworks

```ts
withNetworks(networks)
```

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

### fn spec.initProvider.withNetworksMixin

```ts
withNetworksMixin(networks)
```

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.initProvider.withTier

```ts
withTier(tier)
```

"The service tier of the instance.\nPossible values include: STANDARD, PREMIUM, BASIC_HDD, BASIC_SSD, HIGH_SCALE_SSD, ZONAL, REGIONAL and ENTERPRISE"

### fn spec.initProvider.withZone

```ts
withZone(zone)
```

"The name of the Filestore zone of the instance."

## obj spec.initProvider.fileShares

"File system shares on the instance. For this version, only a\nsingle file share is supported.\nStructure is documented below."

### fn spec.initProvider.fileShares.withCapacityGb

```ts
withCapacityGb(capacityGb)
```

"File share capacity in GiB. This must be at least 1024 GiB\nfor the standard tier, or 2560 GiB for the premium tier."

### fn spec.initProvider.fileShares.withName

```ts
withName(name)
```

"The name of the fileshare (16 characters or less)"

### fn spec.initProvider.fileShares.withNfsExportOptions

```ts
withNfsExportOptions(nfsExportOptions)
```

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

### fn spec.initProvider.fileShares.withNfsExportOptionsMixin

```ts
withNfsExportOptionsMixin(nfsExportOptions)
```

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.fileShares.withSourceBackup

```ts
withSourceBackup(sourceBackup)
```

"The resource name of the backup, in the format\nprojects/{projectId}/locations/{locationId}/backups/{backupId},\nthat this file share has been restored from."

## obj spec.initProvider.fileShares.nfsExportOptions

"Nfs Export Options. There is a limit of 10 export options per file share.\nStructure is documented below."

### fn spec.initProvider.fileShares.nfsExportOptions.withAccessMode

```ts
withAccessMode(accessMode)
```

"Either READ_ONLY, for allowing only read requests on the exported directory,\nor READ_WRITE, for allowing both read and write requests. The default is READ_WRITE.\nDefault value is READ_WRITE.\nPossible values are: READ_ONLY, READ_WRITE."

### fn spec.initProvider.fileShares.nfsExportOptions.withAnonGid

```ts
withAnonGid(anonGid)
```

"An integer representing the anonymous group id with a default value of 65534.\nAnon_gid may only be set with squashMode of ROOT_SQUASH. An error will be returned\nif this field is specified for other squashMode settings."

### fn spec.initProvider.fileShares.nfsExportOptions.withAnonUid

```ts
withAnonUid(anonUid)
```

"An integer representing the anonymous user id with a default value of 65534.\nAnon_uid may only be set with squashMode of ROOT_SQUASH. An error will be returned\nif this field is specified for other squashMode settings."

### fn spec.initProvider.fileShares.nfsExportOptions.withIpRanges

```ts
withIpRanges(ipRanges)
```

"List of either IPv4 addresses, or ranges in CIDR notation which may mount the file share.\nOverlapping IP ranges are not allowed, both within and across NfsExportOptions. An error will be returned.\nThe limit is 64 IP ranges/addresses for each FileShareConfig among all NfsExportOptions."

### fn spec.initProvider.fileShares.nfsExportOptions.withIpRangesMixin

```ts
withIpRangesMixin(ipRanges)
```

"List of either IPv4 addresses, or ranges in CIDR notation which may mount the file share.\nOverlapping IP ranges are not allowed, both within and across NfsExportOptions. An error will be returned.\nThe limit is 64 IP ranges/addresses for each FileShareConfig among all NfsExportOptions."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.fileShares.nfsExportOptions.withSquashMode

```ts
withSquashMode(squashMode)
```

"Either NO_ROOT_SQUASH, for allowing root access on the exported directory, or ROOT_SQUASH,\nfor not allowing root access. The default is NO_ROOT_SQUASH.\nDefault value is NO_ROOT_SQUASH.\nPossible values are: NO_ROOT_SQUASH, ROOT_SQUASH."

## obj spec.initProvider.kmsKeyNameRef

"Reference to a CryptoKey in kms to populate kmsKeyName."

### fn spec.initProvider.kmsKeyNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.kmsKeyNameRef.policy

"Policies for referencing."

### fn spec.initProvider.kmsKeyNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.kmsKeyNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.kmsKeyNameSelector

"Selector for a CryptoKey in kms to populate kmsKeyName."

### fn spec.initProvider.kmsKeyNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.kmsKeyNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.kmsKeyNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.kmsKeyNameSelector.policy

"Policies for selection."

### fn spec.initProvider.kmsKeyNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.kmsKeyNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.networks

"VPC networks to which the instance is connected. For this version,\nonly a single network is supported.\nStructure is documented below."

### fn spec.initProvider.networks.withConnectMode

```ts
withConnectMode(connectMode)
```

"The network connect mode of the Filestore instance.\nIf not provided, the connect mode defaults to\nDIRECT_PEERING.\nDefault value is DIRECT_PEERING.\nPossible values are: DIRECT_PEERING, PRIVATE_SERVICE_ACCESS."

### fn spec.initProvider.networks.withModes

```ts
withModes(modes)
```

"IP versions for which the instance has\nIP addresses assigned.\nEach value may be one of: ADDRESS_MODE_UNSPECIFIED, MODE_IPV4, MODE_IPV6."

### fn spec.initProvider.networks.withModesMixin

```ts
withModesMixin(modes)
```

"IP versions for which the instance has\nIP addresses assigned.\nEach value may be one of: ADDRESS_MODE_UNSPECIFIED, MODE_IPV4, MODE_IPV6."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.networks.withNetwork

```ts
withNetwork(network)
```

"The name of the GCE VPC network to which the\ninstance is connected."

### fn spec.initProvider.networks.withReservedIpRange

```ts
withReservedIpRange(reservedIpRange)
```

"A /29 CIDR block that identifies the range of IP\naddresses reserved for this instance."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."